change legal notice to my name

--- a/legal.html
+++ b/legal.html
@@ -75,28 +75,15 @@
         <div>
           <h2 class="font27">Imprint</h2>
           <ul class="font16">
-            <li>Selina Karlin</li>
-            <li>Urbanstraße</li>
-            <li>79104 Freiburg im Breisgau</li>
+            <li>Marcel Schliwka</li>
+            <li>Komarowstrasse</li>
+            <li>08066 Zwickau</li>
+            <li>
+              <a href="mailto:marcelschliwka@protonmail.com" class="join-link"
+                >marcelschliwka@protonmail.com</a
+              >
+            </li>
           </ul>
-          <h3 class="font20">Exploring the Board</h3>
-          <p class="font16">karlinselina@gmail.com</p>
-
-          <ul class="font16">
-            <li>[Student Names List]</li>
-            <li>[Address of the JOIN operator - e.g. one of the students]</li>
-            <li>[Postcode and city]</li>
-          </ul>
-          <h3 class="font20">Exploring the Board</h3>
-          <p class="font16">Email: [Email]</p>
-          <ul class="font16">
-            <li>[Student Names List]</li>
-            <li>[Address of the JOIN operator - e.g. one of the students]</li>
-            <li>[Postcode and city]</li>
-          </ul>
-          <h3 class="font20">Exploring the Board</h3>
-          <p class="font16">Email: [Email]</p>
-        </div>
 
         <div>
           <h3 class="font20">Acceptance of terms</h3>
