fixes help legal and privacy page responsivness

--- a/legal.html
+++ b/legal.html
@@ -35,15 +35,14 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <!-- FAVICON END -->
-    <link rel="stylesheet" href="styles/styleSidebar.css" />
-    <link rel="stylesheet" href="styles/fonts.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/legal.css" />
-    <link rel="stylesheet" href="styles/bootstrap.css" />
+    <link rel="stylesheet" href="./styles/styleSidebar.css" />
+    <link rel="stylesheet" href="./styles/fonts.css" />
+    <link rel="stylesheet" href="./styles/legal.css" />
+    <link rel="stylesheet" href="./styles/bootstrap.css" />
     <script defer src="./scripts/legal.js"></script>
-    <script defer src="scripts/storage.js"></script>
+    <script defer src="./scripts/storage.js"></script>
     <script defer src="./scripts/utils.js"></script>
-    <script defer src="scripts/sidebar.js"></script>
+    <script defer src="./scripts/sidebar.js"></script>
   </head>
 
   <body onload="initLegal()">
