back button edit task

--- a/addtask.html
+++ b/addtask.html
@@ -42,7 +42,9 @@
     <div w3-include-html="./templates/sidebar.html"></div>
     <div class="add-task-section">
       <h1 id="addTaskHeadline" class="font-61">Add Task</h1>
+      <img src="./img/arrow-left-line.svg" alt="Back" onclick="window.history.back()" class="back-button d-none">
       <form id="task-form">
+        
         <button type="submit" id="submit-btn-responsive"
           class="display-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg
             xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
