fixed summary date

--- a/summary.html
+++ b/summary.html
@@ -127,6 +127,7 @@
             <div class="urgent-right">
               <span class="font-21" id="urgent-deadline"></span>
               <span class="font-16 deadline-text">Upcoming Deadline</span>
+              <span class="font-16 deadline-expired"></span>
             </div>
           </div>
           <div class="main-bottom">
